--- a/audio.html
+++ b/audio.html
@@ -1,53 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Audio Element</title>
-    <style>
-        h1 {
-            text-align: center;
-        }
-    </style>
-</head>
-
-<body>
-    <h1>Audio Attributes</h1>
-    <h4>Audio Controls Autoplay</h4>
-    <dl>
-        <dt>Controls</dt>
-        <dd>Specifies that audio controls should be displayed (such as a play/pause button etc)</dd>
-
-        <dt>autoplay</dt>
-        <dd>Specifies that the audio will start playing as soon as it is ready</dd>
-        <dd>Chromium browsers do not allow autoplay in most cases. However, muted autoplay is always allowed.</dd>
-    </dl>
-    <audio controls>
-        <source src="./../Task-Images/rain-and-thunder-nature-sounds.mp3" type="audio/mp3">
-    </audio>
-    <hr>
-
-    <h4>Audio Controls Autoplay Muted</h4>
-    <dl>
-        <dt>Muted</dt>
-        <dd>Specifies that the audio output should be muted</dd>
-    </dl>
-    <audio controls autoplay muted>
-        <source src="./../Task-Images/rain-audio.mp3" type="audio/mp3">
-    </audio>
-    <hr>
-
-    <h4>Audio Controls loop</h4>
-    <dl>
-        <dt>Loop</dt>
-        <dd>Specifies that the audio will start over again, every time it is finished</dd>
-    </dl>
-    <audio controls loop>
-        <source src="./../Task-Images/soft-rain.mp3" type="audio/mp3">
-    </audio>
-    <hr>
-
-</body>
-
+<html>
+    <head>
+        <title>
+            Audio Element
+        </title>
+    </head>
+    <body>
+        <h2>Audio Element</h2>
+        <Audio controls>
+            <source src="audio2.mpeg" type="audio/mpeg">
+        </Audio>
+    </body>
 </html>
