--- a/marquee.html
+++ b/marquee.html
@@ -1,32 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marquee</title>
-    <style>
-        marquee{
-            background-color:darkgreen;
-            color: white;
-        }
-
-        h1{
-            text-align: center;
-            color: darkgreen;
-        }
-    </style>
+    <title>Marquee Tag</title>
 </head>
 
 <body>
-    <h1>Marquee Tag</h1>
+    <marquee width="100%" height="100" bgcolor="yellow" direction="up">
+        <h1>Welcome to </h1>
+    </marquee>
 
-    <marquee width="30" hspace="49%">Left</marquee>
-    <marquee direction="right" width="60" hspace="48%">Right</marquee>
-    <marquee width="90" hspace="47%">Left</marquee>
-    <marquee direction="right" width="120" hspace="46%">Right</marquee>
-    <marquee width="150" hspace="45%">Left</marquee>
-    <marquee direction="right" width="180" hspace="44%">Right</marquee>
+
+    <marquee width="100%" height="90" bgcolor="pink" direction="down">
+        <h2>India.....</h2>
+    </marquee>
+
+    <marquee width="100%" height="80" bgcolor="orange" direction="right" behavior="slide">
+        <h2>South Korea</h2>
+    </marquee>
+
+    <marquee width="100%" height="70" bgcolor="blue" direction="left" behavior="alternate">
+        <h2>America</h2>
+    </marquee>
+
+    <marquee width="100%" height="60" bgcolor="red" scrollamount="20">
+        <h2>England</h2>
+    </marquee>
+
+    <marquee width="100%" height="70" bgcolor="grey" loop="2">
+        <h2>china</h2>
+    </marquee>
+
+    <marquee width="100%" height="70" bgcolor="violet" vspace="40">
+        <h2>Tailand</h2>
+    </marquee>
+
+    <marquee width="100%" height="70" bgcolor="brown" hspace="70">
+        <h2>china</h2>
+    </marquee>
+
 </body>
 
 </html>
