--- a/Lists.html
+++ b/Lists.html
@@ -1,52 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>List</title>
-
+    <title>HTML Lists</title>
     <style>
-        body {
-            background-color: royalblue;
+        body{
+            background-color:skyblue;
         }
-
         h1{
-            color: sandybrown;
-        }
-
-        h3{
-            color: lightblue;
-        }
-
-        p{
-            color:greenyellow;
-        }
-        li{
-            color: white;
+            color: orange;
         }
     </style>
 </head>
+    <body>
+            <h1>HTML Lists</h1>
+            <h2 style="color: blueviolet;">Unordered List</h2>
+            <h3>Ordering doesn't matter.</h3>
+            <ul>
+                <li>Milk</li>
+                <li>Sugar</li>
+                <li>Bread</li>
+            </ul>
 
-<body>
-    <h1>HTML Lists</h1>
+            <h2 style="color: blueviolet;">Ordered List</h2>
+            <h3>Ordering does matter</h3>
+            <ol>
+                <li>Put the kettle on</li>
+                <li>Put the teabag in the cup</li>
+                <li>Wait for the kettle to boil</li>
+                <li>Pour boiling water in the cup</li>
+            </ol>
 
-    <h3><u>Unordered List</u></h3>
-    <p>Ordering doesn't Matter.</p>
-    <ul>
-        <li>Milk</li>
-        <li>Sugar</li>
-        <li>Bread</li>
-    </ul>
-
-    <h3><u>Ordered List</u></h3>
-    <p>Ordering Does Matter</p>
-    <ol>
-        <li>Put the kettle on</li>
-        <li>Put the tea bag in the cup</li>
-        <li>Wait for kettle to boil</li>
-        <li>Pour boiling water in the cup.</li>
-    </ol>
-</body>
-
+    </body>
 </html>
